--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.2",
-    "framer-motion": "^8.5.0",
-    "next": "13.1.2",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "next/font": "13.1.2",
+    "@nextui-org/input": "^2.1.9",
+    "@nextui-org/react": "^2.1.13",
+    "@swc/helpers": "^0.5.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "framer-motion": "^8.5.5",
+    "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^6.8.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
